# voltiq

./: .gitignore  Makefile  README.md  TRADEMARK.md  package.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/dashboard/: package.json  svelte.config.js  vite.config.ts
apps/dashboard/src/: app.css  app.html
apps/dashboard/src/lib/api/: report.ts  types.ts
apps/dashboard/src/lib/styles/: _inline-styles.css
apps/dashboard/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/landing/: package.json  svelte.config.js  vite.config.ts
apps/landing/src/: app.css  app.html
apps/landing/src/routes/: +layout.ts  +page.svelte
crates/: Cargo.toml  package.json
crates/voltiq-analysis/: Cargo.toml
crates/voltiq-analysis/src/: lib.rs
crates/voltiq-cli/: Cargo.toml
crates/voltiq-cli/src/: main.rs  runs.rs
crates/voltiq-core/: Cargo.toml
crates/voltiq-core/src/: finding.rs  lib.rs  metric.rs  process.rs  redact.rs  render.rs  report.rs  severity.rs
crates/voltiq-mcp/: Cargo.toml
crates/voltiq-mcp/src/: lib.rs
crates/voltiq-perf/: Cargo.toml
crates/voltiq-perf/src/: analysis.rs  detect.rs  lib.rs  load.rs  osmetrics.rs  portresolve.rs  watch.rs  web.rs  web_interactive.rs
crates/voltiq-security/: Cargo.toml
crates/voltiq-security/src/: client_bundle.rs  entropy.rs  env.rs  git_history.rs  lib.rs  rules.rs  walk.rs
crates/voltiq-server/: Cargo.toml
crates/voltiq-server/dashboard-dist/: index.html
crates/voltiq-server/dashboard-dist/_app/: version.json
crates/voltiq-server/dashboard-dist/_app/immutable/assets/: 0.X0r12ZAB.css
crates/voltiq-server/dashboard-dist/_app/immutable/chunks/: B74HF8tE.js  C8uA-51h.js  CMwFxGts.js  CvG3GBXK.js  D9Ud_yKM.js  aAju_oKS.js  sHcPynht.js
crates/voltiq-server/dashboard-dist/_app/immutable/entry/: app.BwypM7Wc.js  start.DJ-BputM.js
crates/voltiq-server/dashboard-dist/_app/immutable/nodes/: 0.CCoOFmH6.js  1.ClaYAfUI.js  2.BkBsbQYE.js
crates/voltiq-server/src/: lib.rs
docs/: demo-prod.cast  demo.cast
integrations/: README.md  claude-mcp.json  codex-config.toml  cursor-mcp.json  github-action-scan.yml  pre-commit.sh
