[package]
name = "voltiq-perf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime performance / memory profiling engine for voltiq (launch + attach)."

[dependencies]
futures-util = "0.3.32"
serde_json.workspace = true
sysinfo = "0.38.4"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-tungstenite = "0.29.0"
voltiq-core = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
