[package]
name = "voltiq-security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secret / credential / env-leak scanning engine for voltiq."

[dependencies]
voltiq-core = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
